tests/fixtures/invalid/try_on_non_result.incn
def foo() -> Result[int, str]:
    x = 42
    y = x?
    return Ok(y)
